# open-graphrag-app

./: README.md  todo.md
fast-graphrag/: README.md  hello.py  main.py  pyproject.toml
fast-graphrag/_tmp/rag/: demo.py  settings.yaml
fast-graphrag/_tmp/rag/cache/extract_graph/: chat_04fdc729a4c5535b7092421eda460756c293e80d4483529037f9f2d60e06e47a_v2  chat_1a0d5e25d68f52d5ea6b61ba5362d6fdfb457d77891d4efa0c419e541add61d6_v2  chat_6ca9702ae602b88357f59253240e7ffc53d19fd950861c7eda624f11f2f2ba47_v2  chat_85ffce9cd13c642aba69102562f4700c731824c6d9ce218dc204ef5fd6744e40_v2  chat_b4ac2de1f3da01d4d52b681cfff3506129aab060758f24d66ba83025024e986d_v2  chat_extract-continuation-0_13aca71da0c3bedf96544fde53ead3f685d3607e4b6131331f995f9b2f0ed001_v2  chat_extract-continuation-0_22763c01b720ac48a37aa3e9e42946f378ea32e425fe5e2f10eaa3f3d4afaaf3_v2  chat_extract-continuation-0_79880146d965b5329e72bc0464d1542198d265c1b6341f390bd1f1c07c80b70c_v2  chat_extract-continuation-0_7ff1b41ca51de69ad95e638838b5ff13ed0c55910f98a98b1ae9ab5273c25c57_v2  (+1 more)
fast-graphrag/_tmp/rag/input/: pg24022.txt
fast-graphrag/_tmp/rag/logs/: logs.txt
fast-graphrag/_tmp/rag/output/: documents.parquet  text_units.parquet
fast-graphrag/app/config/: db.py  settings.py
fast-graphrag/app/core/: dependencies.py
fast-graphrag/app/jobs/: manager.py  schemas.py  worker.py
fast-graphrag/app/models/: __init__.py  auth.py  file.py  job.py  workspace.py
fast-graphrag/app/router/: auth.py  file.py  jobs.py  kg.py  workspace.py
fast-graphrag/app/services/: kg_builder.py
next-graphrag/: README.md  package.json  (+2 more)
(+28 files in other folders)
